# turboquant_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
turboquant-cli/: Cargo.toml
turboquant-cli/src/: main.rs
turboquant-core/: Cargo.toml
turboquant-core/benches/: bench_core.rs
turboquant-core/examples/: bench_matmul.rs
turboquant-core/src/: codebook.rs  error.rs  kv_cache.rs  lib.rs  outlier.rs  polar_quant.rs  qjl.rs  rotation.rs  turboquant.rs  utils.rs
turboquant-core/tests/: test_codebook.rs  test_distortion.rs  test_kv_cache.rs  test_outlier.rs  test_polar_quant.rs  test_qjl.rs  test_rotation.rs  test_turboquant.rs  test_utils.rs
turboquant-py/: Cargo.toml  pyproject.toml
turboquant-py/src/: lib.rs
turboquant-py/tests/: test_bindings.py
